test/cli/test/mixed-deprecated/patched-resource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselector-without-labels-on-mutation
  labels:
    app.kubernetes.io/managed-by: "open-xyz"
  namespace: user-foo
spec:
  containers:
  - name: nginx
    image: nginx:latest
