test/cli/test/mixed-deprecated/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: ondemand
  resources:
  - user-foo/nodeselector-without-labels-on-mutation
  result: fail
  rule: ondemand-managed_by
- kind: Pod
  policy: ondemand
  resources:
  - user-space/nodeselector-with-labels-on-mutation
  result: pass
  rule: ondemand-managed_by
- kind: Pod
  patchedResources: patched-resource.yaml
  policy: ondemand
  resources:
  - user-space/nodeselector-with-labels-on-mutation
  result: pass
  rule: ondemand-nodeselector
